tests: add monitoring-ccontainer + fix for grafana job with prometheus

--- a/tests/ansible/playbook-test-monitoring.yml
+++ b/tests/ansible/playbook-test-monitoring.yml
@@ -18,7 +18,7 @@
 
   roles:
     - monitoring-prometheus_agent
-  tags: agent, agents
+  tags: agent, agents, prometheus-agent
   # variables are in the inventory under group_vars/monitoring-agent
 
 
