--- a/.ci/docker-compose.ansimulator.env
+++ b/.ci/docker-compose.ansimulator.env
@@ -2,14 +2,14 @@
 
 # docker images and tags to use as references
 # ref: https://hub.docker.com/_/debian
-# ref: https://hub.docker.com/_/rockylinux
+# ref: https://hub.docker.com/r/rockylinux/rockylinux
 IMAGE_DEBIAN_REF_NAME=debian
-IMAGE_DEBIAN_REF_VERSION=11.7
-IMAGE_CENTOS_REF_NAME=rockylinux
-IMAGE_CENTOS_REF_VERSION=8.8
+IMAGE_DEBIAN_REF_VERSION=12.9
+IMAGE_CENTOS_REF_NAME=rockylinux/rockylinux
+IMAGE_CENTOS_REF_VERSION=9.5
 
 # will be set as the tag for the simulator images
-IMAGE_BUILD_DATE=20240324-v2.9
+IMAGE_BUILD_DATE=20250216-v2.16
 
 
 # docker images to build for the CI - the version numbers should reuse those from the references
@@ -42,8 +42,8 @@ ANSIBLE_DIR_ETC_MODE=rw
 # Package proxies for YUM or APT
 # Notice : this will be imprinted into the images on build, recreate them to change the proxy after the images are built
 # ex: ..._PROXY=http://192.168.0.123:3142
-PKG_APT_PROXY=
-PKG_YUM_PROXY=
+PKG_DEB_PROXY=
+PKG_RPM_PROXY=
 
 
 # Docker volume to store  /var/lib/docker data - removed when the simulator is stopped - DO NOT CHANGE
