--- a/.ci/docker-ansimulator-template/ansible/requirements.yml
+++ b/.ci/docker-ansimulator-template/ansible/requirements.yml
@@ -12,7 +12,9 @@ collections:
   - ansible.posix
   - ansible.windows
   - community.general
-  - community.crypto
+  - name: community.crypto
+    # crypto v3+ requires ansible-core v2.17+ but galaxy's api fails to apply the restriction - ref : https://github.com/ansible/ansible/issues/78539
+    version: "<3.0.0"
   - community.mysql
   - community.postgresql
 
