--- a/.ci/docker-ansimulator-template/ansible/requirements_2.16.yml
+++ b/.ci/docker-ansimulator-template/ansible/requirements_2.16.yml
@@ -9,6 +9,7 @@ collections:
   # ansible collections: https://docs.ansible.com/ansible/latest/collections/ansible/index.html
   # also : https://github.com/ansible-collections
   - name: ansible.netcommon
+    version: "<8.0.0"
 
   - name: ansible.utils
 
@@ -17,12 +18,17 @@ collections:
   - name: ansible.windows
 
   - name: community.general
+    version: "<12.0.0"
 
   - name: community.crypto
+    # crypto v3+ requires ansible-core v2.17+ but galaxy's api fails to apply the restriction - ref : https://github.com/ansible/ansible/issues/78539
+    version: "<3.0.0"
 
   - name: community.mysql
+    version: "<5.0.0"
 
   - name: community.postgresql
+    version: "<5.0.0"
 
 
 roles: []
