ci docker: compose.env - using the images from dockerhub + debian version updated to 12.12

--- a/.ci/docker-compose.ansimulator.env
+++ b/.ci/docker-compose.ansimulator.env
@@ -4,17 +4,20 @@
 # ref: https://hub.docker.com/_/debian
 # ref: https://hub.docker.com/r/rockylinux/rockylinux
 IMAGE_DEBIAN_REF_NAME=debian
-IMAGE_DEBIAN_REF_VERSION=12.11
+IMAGE_DEBIAN_REF_VERSION=12.12
 IMAGE_CENTOS_REF_NAME=rockylinux/rockylinux
 IMAGE_CENTOS_REF_VERSION=9.6
 
 # will be set as the tag for the simulator images
-IMAGE_BUILD_DATE=20250216-v2.16
+IMAGE_BUILD_DATE=20250914-v2.16
+
+# Ansible version
+# ANSIBLE_VERSION => set in ".ci/docker-ansimulator-template/Dockerfile"
 
 
 # docker images to build for the CI - the version numbers should reuse those from the references
-IMAGE_DEBIAN_CI=ansimulator/debian-ssh:${IMAGE_DEBIAN_REF_VERSION}.${IMAGE_BUILD_DATE}
-IMAGE_CENTOS_CI=ansimulator/centos-ssh:${IMAGE_CENTOS_REF_VERSION}.${IMAGE_BUILD_DATE}
+IMAGE_DEBIAN_CI=daryes/ansimulator:debian-ssh-${IMAGE_DEBIAN_REF_VERSION}.${IMAGE_BUILD_DATE}
+IMAGE_CENTOS_CI=daryes/ansimulator:centos-ssh-${IMAGE_CENTOS_REF_VERSION}.${IMAGE_BUILD_DATE}
 
 
 # change this to 0.0.0.0 if you want to reach the listen ports - retrieve the current list with "docker ps"
@@ -22,13 +25,9 @@ DOCKER_HOST_IP=127.0.0.1
 
 
 # Number of instances to start for each distribution
-# one debian is required for docker in docker as it does not work on centos8 (missing one nftables module and fixed only in centos9)
+# Using a debian container is required for docker in docker with centos8 (failing due to a missing nftables module and fixed only in centos9)
 CENTOS_CONTAINER_COUNT=3
 DEBIAN_CONTAINER_COUNT=1
-
-
-# Ansible version
-# ANSIBLE_VERSION => set in ".ci/docker-ansimulator-template/Dockerfile"
 
 
 # location of the vault password file
