makefile: usa docker-compose instead of the compose plugin

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -28,7 +28,7 @@ ANSIBLE_SIMUL_INVENTORY_EXEC=${ANSIBLE_SIMUL_INVENTORY_ENV} ansible-playbook ${O
 
 
 # docker compose commands for running ansible
-DOCKER_EXEC_COMPOSE_CMD=docker compose
+DOCKER_EXEC_COMPOSE_CMD=docker-compose
 ANSIBLE_SIMUL_COMPOSE_CMD=${DOCKER_EXEC_COMPOSE_CMD} -f ${ANSIBLE_SIMUL_COMPOSE}  --env-file ${ANSIBLE_SIMUL_COMPOSE_ENV}
 
 
